Icecast URL was added

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 export LASTSONG=".lastsong"
+export ICECAST_URL="http://127.0.0.1:3000/status-json.xsl"
 export LOGS_FILENAME="somefile.ext"
 export LOGS_MIMETYPE="text/plain"
 export GDRIVE_CLIENTEMAIL=""
